# coding

./: .gitignore  README.md
Math/Approximating Smooth Curves From Finite Points Using Fourier Series/: .gitignore  IO.c  calculations.c  headers_and_definitions.c  main.c  main.py
Others/Calculator/: .gitignore  core.c  definitions.c  main.c  makefile  rpn_generator.c  shared.c  stacks.c
Others/curve-fitting/: 2d-graph-renderer.py  config.c  config.h  graph-rendering.c  graph-rendering.h  initialization.c  initialization.h  main.c  memory-management.c  memory-management.h  parameter-optimization.c  parameter-optimization.h  point-generation.c  point-generation.h
Others/pcg-c-basic/: README.md
Physics/Amount of Rays Escaping n Layers of Cover/: .gitignore  calc.c  defs.h  main.c  main.py  makefile
Physics/Approximating Earth's Pressure and Density as a Function of Height/: README.md  untitled.c  untitled1.py
Physics/Calculating The Time Required to Reach The Earth's Center Through a Tunnel Using The PREM Model/: untitled.c  untitled.py
Physics/Ideal Gas Simulation/: main.py  meson.build
Physics/Ideal Gas Simulation/src/: 2d-renderer.py  argument-parser.c  argument-parser.h  collision-handler.c  collision-handler.h  data-dumper.c  data-dumper.h  initial-conditions-generator.c  initial-conditions-generator.h  main.c  meson.build  phase-updates.c  phase-updates.h  todo.txt
Physics/Ideal Gas Simulation/src/include/: variable-types.h
Physics/Ising Model/: common.h  exact_solutions.py  initialization.c  initialization.h  ising.c  ising.py  main.py  makefile  memory-management.c  memory-management.h  metropolis.c  metropolis.h  plots.py
Physics/Modeling Temperature vs Time Using The Heat Equation/: .gitignore  Makefile  core.c  initialization.c  main.c  main.py
Physics/NQS Thesis/: comparing-nqs-data.py  comparing-nqs-plot.py  converter.sh  curve_fit.py  divergence-data.py  divergence-plot.py  observables-data-1d-ed.py  observables-data-1d.py  observables-data.py  observables-plot-10x10.py  observables-plot-1d.py  observables-plot-6x6.py  print_energy_var.py  sr-sgd-adamw-data.py  sr-sgd-adamw-plot.py  tuning-plot.py
Physics/Schrodinger's Equation/: single_slit.py
Physics/Single Slit Using Maxwell's Equations/: main.py  yee.py
lab-works/: .gitignore  README.md
(+81 files in other folders)
